--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "config-leaf": "^0.3.0",
+    "firebase": "^5.3.0",
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-router-flux": "^4.0.0-beta.31"
